crates/ir/tests/ir/snapshots/main__ir__lower__data_types__struct_update_codegen.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__struct_update_codegen

struct Point { x: Int, y: Int }
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (h) -> Unit

fn main() -> Unit =
  let v0: Point = construct Point(1, 2)
  let_join v7(v1: Point) =
    let v5: Int = project v1.0
    let v4: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
    let v6: Unit = call println(v4, v5)
    v6
  in
  let v2: Int = project v0.1
  let v3: Point = construct Point(99, v2)
  jump v7(v3)
