crates/ir/tests/ir/snapshots/main__ir__lower__data_types__with_disjoint_codegen.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__with_disjoint_codegen

struct Addr { city: Int }
struct User { age: Int, addr: Addr }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Addr = construct Addr(0)
  let v0: User = construct User(0, v1)
  let_join v15(v2: User) =
    let v8: Int = project v2.0
    let v9: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
    let v10: Unit = call println(v9, v8)
    let v12: Addr = project v2.1
    let v13: Int = project v12.0
    let v11: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
    let v14: Unit = call println(v11, v13)
    v14
  in
  let_join v7(v5: Addr) =
    let v6: User = construct User(5, v5)
    jump v15(v6)
  in
  let v3: Addr = project v0.1
  let v4: Addr = construct Addr(99)
  jump v7(v4)
