crates/ir/tests/ir/snapshots/main__ir__lower__data_types__with_single_codegen.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__with_single_codegen

struct Zip { zip: Int }
struct City { zip: Zip }
struct Addr { city: City }
struct User { addr: Addr }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Zip = construct Zip(1)
  let v2: City = construct City(v1)
  let v3: Addr = construct Addr(v2)
  let v0: User = construct User(v3)
  let_join v27(v4: User) =
    let v22: Addr = project v4.0
    let v23: City = project v22.0
    let v24: Zip = project v23.0
    let v25: Int = project v24.0
    let v21: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
    let v26: Unit = call println(v21, v25)
    v26
  in
  let_join v20(v18: Addr) =
    let v19: User = construct User(v18)
    jump v27(v19)
  in
  let v5: Addr = project v0.0
  let_join v17(v15: City) =
    let v16: Addr = construct Addr(v15)
    jump v20(v16)
  in
  let v6: Addr = project v0.0
  let v7: City = project v6.0
  let_join v14(v12: Zip) =
    let v13: City = construct City(v12)
    jump v17(v13)
  in
  let v8: Addr = project v0.0
  let v9: City = project v8.0
  let v10: Zip = project v9.0
  let v11: Zip = construct Zip(94103)
  jump v14(v11)
